# ontograph

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/audit-hooks/: SKILL.md
.claude/skills/audit-hooks/scripts/: test_hooks.sh  validate_hooks.py
.claude/skills/audit-skills/: SKILL.md
.claude/skills/audit-skills/scripts/: detect_drift.py  scan_skills.py
.claude/skills/bug-fixer/: SKILL.md
.claude/skills/bug-fixer/scripts/: recent_changes.py  search_errors.sh
.claude/skills/commit-review/: SKILL.md
.claude/skills/doc-creator/: SKILL.md
.claude/skills/doc-creator/references/: examples.md  mermaid-syntax.md
.claude/skills/doc-creator/scripts/: discover_files.sh  list_docs.sh
.claude/skills/fine-tune-skills/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/implementer/: SKILL.md
.claude/skills/linting-enforcer/: SKILL.md
.claude/skills/project-improve/: SKILL.md
.claude/skills/skill-generator/: SKILL.md
.claude/skills/tech-pm/: SKILL.md
.claude/skills/test-guard/: SKILL.md
.claude/skills/ux-feedback-ingest/: SKILL.md
.claude/skills/ux-tester/: SKILL.md
agents/: decisions.md  lessons.md
docs/: architecture.md
examples/: home_renovation.py
src/ontograph/: __init__.py  cli.py  config.py  dashboard.py  db.py  ingest.py  llm.py  models.py  onto.py  orbit.py  resolve.py  schema_registry.py  search.py  temporal.py
tests/: test_cli.py  test_config.py  test_db.py  test_ingest_expanded.py  test_models.py  test_resolve.py  test_schema_expanded.py  test_temporal.py
(+15 files in other folders)
