[project]
name = "ontograph"
version = "0.5.0"
description = "LLM-powered knowledge graph engine with ontological entity resolution, orbit-based proximity scoring, and hybrid semantic-graph retrieval."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Kai Maurin-Jones" }]
dependencies = [
    "openai>=1.60.0",
    "numpy>=2.0.0",
    "jellyfish>=1.1.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.2.2",
    "google-genai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
ontograph = "ontograph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ontograph"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"src/ontograph/dashboard.py" = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
